--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "commander": "^3.0.1",
     "express": "^4.17.1",
+    "inquirer": "^7.0.0",
     "mime": "^2.3.1",
     "morgan": "^1.9.1"
   }
