--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "body-parser": "^1.19.0",
     "commander": "^3.0.1",
     "express": "^4.17.1",
+    "http": "0.0.0",
     "inquirer": "^7.0.0",
-    "mime": "^2.3.1",
-    "morgan": "^1.9.1"
+    "mime": "^2.4.4",
+    "morgan": "^1.9.1",
+    "url": "^0.11.0"
   }
 }
